fix component links

--- a/content/components/accordion.mdx
+++ b/content/components/accordion.mdx
@@ -1,13 +1,13 @@
 ---
-title: 'Accordions'
-description: 'A dropdown component for toggling content'
-icon: 'square-caret-down'
+title: "Accordions"
+description: "A dropdown component for toggling content"
+icon: "square-caret-down"
 ---
 
 <Accordion title="I am an Accordion.">
   You can put any content in here. Check out
-  [AccordionGroup](/components/accordion-group) if you want to group multiple
-  Accordions into a single display.
+  [AccordionGroup](/content/components/accordion-group) if you want to group
+  multiple Accordions into a single display.
 </Accordion>
 
 <RequestExample>
