--- a/content/components/card.mdx
+++ b/content/components/card.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Cards'
-description: 'Highlight main points or links with customizable icons'
-icon: 'rectangle'
+title: "Cards"
+description: "Highlight main points or links with customizable icons"
+icon: "rectangle"
 ---
 
-<Card title="Card Title" icon="link" href="/components/card-group">
+<Card title="Card Title" icon="link" href="/content/components/card-group">
   This is how you use a card with an icon and a link. Clicking on this card
   brings you to the Card Group page.
 </Card>
@@ -12,7 +12,7 @@ icon: 'rectangle'
 <RequestExample>
 
 ```jsx Card Example
-<Card title="Click on me" icon="link" href="/components/card-group">
+<Card title="Click on me" icon="link" href="/content/components/card-group">
   This is how you use a card with an icon and a link. Clicking on this card
   brings you to the Card Group page.
 </Card>
