--- a/content/components/code.mdx
+++ b/content/components/code.mdx
@@ -1,14 +1,14 @@
 ---
-title: 'Code Blocks'
-description: 'Display code with optional syntax highlighting'
-icon: 'code'
+title: "Code Blocks"
+description: "Display code with optional syntax highlighting"
+icon: "code"
 ---
 
 <RequestExample>
 
 ````md Code Block Example
 ```javascript Code Block Example
-const hello = 'world';
+const hello = "world";
 ```
 ````
 
@@ -57,12 +57,12 @@ class HelloWorld {
 You can add more text after the programming language to set the name of your code example. The text can be anything as long as its all in one line.
 
 ```javascript Code Block Example
-const hello = 'world';
+const hello = "world";
 ```
 
 ````md Code Block Example
 ```javascript Code Block Example
-const hello = 'world';
+const hello = "world";
 ```
 ````
 
@@ -70,6 +70,6 @@ const hello = 'world';
 
 Want to display multiple code examples in one code box? Check out the Code Group docs:
 
-<Card title="Code Group" href="/components/code-group" icon="columns-3">
+<Card title="Code Group" href="/content/components/code-group" icon="columns-3">
   Read the reference for the Code Group component
 </Card>
