--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -32,7 +32,11 @@ To get more customizability with images, you can also use [embeds](/writing-cont
 
 For more information, we recommend the following sections:
 
-<Card title="Frame Component Reference" icon="frame" href="/components/frame">
+<Card
+  title="Frame Component Reference"
+  icon="frame"
+  href="/content/components/frame"
+>
   Read the reference for the Frame component
 </Card>
 
