--- a/content/overview.mdx
+++ b/content/overview.mdx
@@ -38,7 +38,7 @@ class HelloWorld {
 
 ### Callouts
 
-To present additional context outside of the main content, you can use a [Callout](/components/callouts) component. Find Warnings and Notes in addition to Tip callouts here.
+To present additional context outside of the main content, you can use a [Callout](/content/components/callouts) component. Find Warnings and Notes in addition to Tip callouts here.
 
 <Tip>This suggests a helpful tip</Tip>
 
@@ -48,7 +48,7 @@ To present additional context outside of the main content, you can use a [Callou
 
 ### Accordions
 
-Use the [Accordian](/components/accordion) component to create a dropdown with additional content.
+Use the [Accordian](/content/components/accordion) component to create a dropdown with additional content.
 
 <Accordion title="I am an Accordion.">
   You can put any content in here.
@@ -62,15 +62,15 @@ Use the [Accordian](/components/accordion) component to create a dropdown with a
 
 ### Cards
 
-To highlight important points and links, you can use a [Card](/components/card) component.
+To highlight important points and links, you can use a [Card](/content/components/card) component.
 
-<Card title="Click on me" icon="link" href="/components/card">
+<Card title="Click on me" icon="link" href="/content/components/card">
   This is how you use a card with an icon and a link. Clicking on this card
   brings you to the Card components page.
 </Card>
 
 ```md
-<Card title="Click on me" icon="link" href="/components/card">
+<Card title="Click on me" icon="link" href="/content/components/card">
   This is how you use a card with an icon and a link. Clicking on this card
   brings you to the Card components page.
 </Card>
@@ -78,7 +78,7 @@ To highlight important points and links, you can use a [Card](/components/card) 
 
 ### Other
 
-For a full list of pre-built components, see our [Components library](/components).
+For a full list of pre-built components, see our [Components library](/content/components).
 
 ### Requests
 
