--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -81,7 +81,7 @@ sidebarTitle: "Short title"
 
 ## Sidebar Icons
 
-Want an icon for your sidebar item like the ones in [components](/components/accordion)? You can set an `icon` attribute in the metadata! All icons from [Font Awesome](https://fontawesome.com/icons) are available for us.
+Want an icon for your sidebar item like the ones in [components](/content/components/accordion)? You can set an `icon` attribute in the metadata! All icons from [Font Awesome](https://fontawesome.com/icons) are available for us.
 
 ```md
 ---
