--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -32,7 +32,7 @@ To create an API page, you must set an `api` or `openapi` property in the page m
 
 ### Defining API Parameters
 
-See our [components reference](/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenAPI](/api-playground/openapi).
+See our [components reference](/api-playground/components/api) for all components you can use to improve your API docs. We will automatically generate all parameter components if you are using [OpenAPI](/api-playground/openapi).
 
 ## Playground Settings
 
