--- a/content/code.mdx
+++ b/content/code.mdx
@@ -35,4 +35,4 @@ class HelloWorld {
 ```
 ````
 
-Visit the [Code Block page](/components/code) for more detailed docs.
+Visit the [Code Block page](content/components/code) for more detailed docs.
