--- a/content/components/accordion-group.mdx
+++ b/content/components/accordion-group.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Accordion Group'
-description: 'Group multiple accordions into a single display.'
-icon: 'table-rows'
+title: "Accordion Group"
+description: "Group multiple accordions into a single display."
+icon: "table-rows"
 ---
 
 Simply add `<AccordionGroup>` around your existing `<Accordion>` components.
@@ -21,11 +21,11 @@ Simply add `<AccordionGroup>` around your existing `<Accordion>` components.
   </Accordion>
 
   <Accordion title="FAQ with Icon" icon="alien-8bit">
-    Check out the [Accordion](/components/accordion) docs for all the supported props.
+    Check out the [Accordion](/content/components/accordion) docs for all the supported props.
   </Accordion>
   
   <Accordion title="FAQ without Icon">
-    Check out the [Accordion](/components/accordion) docs for all the supported props.
+    Check out the [Accordion](/content/components/accordion) docs for all the supported props.
   </Accordion>
 </AccordionGroup>
 
@@ -47,11 +47,11 @@ Simply add `<AccordionGroup>` around your existing `<Accordion>` components.
   </Accordion>
 
   <Accordion title="FAQ with Icon" icon="alien-8bit">
-    Check out the [Accordion](/components/accordion) docs for all the supported props.
+    Check out the [Accordion](/content/components/accordion) docs for all the supported props.
   </Accordion>
 
   <Accordion title="FAQ without Icon">
-    Check out the [Accordion](/components/accordion) docs for all the supported props.
+    Check out the [Accordion](/content/components/accordion) docs for all the supported props.
   </Accordion>
 </AccordionGroup>
 ````
