add image for editor check

--- a/settings/add-members.mdx
+++ b/settings/add-members.mdx
@@ -7,4 +7,12 @@ The team member who created your initial docs will have update access to your do
 
 If another editor attempts to update the docs while on the free plan, you will see a warning in your git commit check.
 
-[Upgrade your plan](https://dashboard.mintlify.com) to enable unlimited editors to update your docs.
+<Frame>
+  <img src="/images/editor-gate.png" />
+</Frame>
+
+In the details of the git check warning, you'll find the link to upgrade your plan.
+
+You can also upgrade your plan on the [dashboard](https://dashboard.mintlify.com) to enable unlimited editors to update your docs.
+
+Learn more about our pricing [here](https://mintlify.com/pricing).
