--- a/settings/add-members.mdx
+++ b/settings/add-members.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Editor permissions"
+title: "Editor Permissions"
 description: "Allow more members of your team to update your docs"
 ---
 
