adding pricing details

--- a/settings/add-members.mdx
+++ b/settings/add-members.mdx
@@ -11,8 +11,6 @@ If another editor attempts to update the docs while on the free plan, you will s
   <img src="/images/editor-gate.png" />
 </Frame>
 
-In the details of the git check warning, you'll find the link to upgrade your plan.
-
-You can also upgrade your plan on the [dashboard](https://dashboard.mintlify.com) to enable unlimited editors to update your docs.
+In the details of the git check warning, you'll find the link to upgrade your plan. You can also upgrade your plan on the [dashboard](https://dashboard.mintlify.com) to enable unlimited editors to update your docs. Once you upgrade your plan, trigger a manual update or push another change to deploy your updates.
 
 Learn more about our pricing [here](https://mintlify.com/pricing).
