Update overview.mdx (#40)

--- a/api-playground/overview.mdx
+++ b/api-playground/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Playground Overview"
 description: "Enable users to interact with your API"
-api: "GET https://server.mintlify.com/api/v1/demo"
+api: "GET https://mintlify.com/docs/api/demo"
 hideApiMarker: true
 ---
 
