--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -332,7 +332,10 @@ Example: `mintlify`
 
   <Expandable title="Integrations">
     <ResponseField name="intercom" type="string">
-    Enables intercom widget on docs site. The value should be your intercom App ID.
+    Enables Intercom widget on docs site. The value should be your Intercom App ID.
+    </ResponseField>
+    <ResponseField name="frontchat" type="string">
+    Enables Frontchat widget on docs site. The value should be your Frontchat App ID.
     </ResponseField>
   </Expandable>
 </ResponseField>
@@ -409,7 +412,8 @@ Click on the following dropdown to view a sample configuration file
     "twitter": "https://twitter.com/mintlify"
   },
   "integrations": {
-    "intercom": "abcdefz"
+    "intercom": "abcdefz",
+    "frontchat": "abcdez"
   }
 }
 ```
