--- a/content/component-library.mdx
+++ b/content/component-library.mdx
@@ -3,12 +3,7 @@ title: "Components"
 description: "Enhance your docs with our pre-built components "
 ---
 
-Components are reusable building blocks for your documentation. They can be added **directly within your files**. Some components are rendered from [Markdown syntax](https://www.markdownguide.org/basic-syntax/), while other components work the same way as [React components](https://reactjs.org/docs/components-and-props.html).
-
-<Tip>
-  Mintlify provides a library of [built-in components](/components) to make your
-  docs beautiful without formatting things yourself.
-</Tip>
+Mintlify provides a library of build-in-components to make your docs beautiful without formatting things yourself. They can be added **directly within your files**. Some components are rendered from [Markdown syntax](https://www.markdownguide.org/basic-syntax/), while other components work the same way as [React components](https://reactjs.org/docs/components-and-props.html).
 
 ## Examples
 
@@ -78,7 +73,7 @@ To highlight important points and links, you can use a [Card](/content/component
 
 ### Other
 
-For a full list of pre-built components, see our [Components library](/content/components).
+For a full list of pre-built components, see our [Components library](/content/components). You can also contribute to our components in our [repository](https://github.com/mintlify/components).
 
 ### Requests
 
