remove references to discord

--- a/code-of-conduct.mdx
+++ b/code-of-conduct.mdx
@@ -22,41 +22,41 @@ and participate in the community.
 - **Be friendly and patient.**
 
 - **Be welcoming.** We as members, contributors, and leaders pledge to make participation in our
-community a harassment-free experience for everyone, regardless of age, body
-size, visible or invisible disability, ethnicity, sex characteristics, gender
-identity and expression, level of experience, education, socio-economic status,
-nationality, personal appearance, race, caste, color, religion, or sexual
-identity and orientation.
+  community a harassment-free experience for everyone, regardless of age, body
+  size, visible or invisible disability, ethnicity, sex characteristics, gender
+  identity and expression, level of experience, education, socio-economic status,
+  nationality, personal appearance, race, caste, color, religion, or sexual
+  identity and orientation.
 
 - **Be considerate.** Your work will be used by other people, and you in turn
-will depend on the work of others. Any decision you take will affect users
-and colleagues, and you should take those consequences into account. Remember
-that we're a world-wide community, so you might not be communicating in
-someone else's primary language.
+  will depend on the work of others. Any decision you take will affect users
+  and colleagues, and you should take those consequences into account. Remember
+  that we're a world-wide community, so you might not be communicating in
+  someone else's primary language.
 
 - **Be respectful.** Not all of us will agree all the time, but disagreement is
-no excuse for poor behavior and poor manners. We might all experience some
-frustration now and then, but we cannot allow that frustration to turn into
-a personal attack. It's important to remember that a community where people
-feel uncomfortable or threatened is not a productive one. Members of the Mintlify
-community should be respectful when dealing with other members as well as
-with people outside the Mintlify community.
+  no excuse for poor behavior and poor manners. We might all experience some
+  frustration now and then, but we cannot allow that frustration to turn into
+  a personal attack. It's important to remember that a community where people
+  feel uncomfortable or threatened is not a productive one. Members of the Mintlify
+  community should be respectful when dealing with other members as well as
+  with people outside the Mintlify community.
 
 - **Be careful in the words that you choose and be kind to others.** Do not
-insult or put down other participants. Harassment and other exclusionary
-behavior isn't acceptable.
-In general, if someone asks you to stop, then stop. Persisting in such
-behavior after being asked to stop is considered harassment.
+  insult or put down other participants. Harassment and other exclusionary
+  behavior isn't acceptable.
+  In general, if someone asks you to stop, then stop. Persisting in such
+  behavior after being asked to stop is considered harassment.
 
 - **When we disagree, try to understand why.** Disagreements, both social and
-technical, happen all the time and Mintlify is no exception. It is important that
-we resolve disagreements and differing views constructively. Remember that
-we're different. The strength of Mintlify comes from its varied community, people
-from a wide range of backgrounds. Different people have different
-perspectives on issues. Being unable to understand why someone holds
-a viewpoint doesn't mean that they're wrong. Don't forget that it is human to
-err and blaming each other doesn't get us anywhere. Instead, focus on helping
-to resolve issues and learning from mistakes.
+  technical, happen all the time and Mintlify is no exception. It is important that
+  we resolve disagreements and differing views constructively. Remember that
+  we're different. The strength of Mintlify comes from its varied community, people
+  from a wide range of backgrounds. Different people have different
+  perspectives on issues. Being unable to understand why someone holds
+  a viewpoint doesn't mean that they're wrong. Don't forget that it is human to
+  err and blaming each other doesn't get us anywhere. Instead, focus on helping
+  to resolve issues and learning from mistakes.
 
 ### Examples of behavior that contributes to a positive environment
 
@@ -64,20 +64,20 @@ to resolve issues and learning from mistakes.
 - Being respectful of differing opinions, viewpoints, and experiences.
 - Giving and gracefully accepting constructive feedback.
 - Accepting responsibility and apologizing to those affected by our mistakes,
-and learning from the experience.
+  and learning from the experience.
 - Focusing on what is best not just for us as individuals, but for the overall
-community.
+  community.
 
 ### Examples of unacceptable behavior
 
 - The use of sexualized language or imagery, and sexual attention or advances of
-any kind.
+  any kind.
 - Trolling, insulting or derogatory comments, and personal or political attacks.
 - Public or private harassment.
 - Publishing others' private information, such as a physical or email address,
-without their explicit permission.
+  without their explicit permission.
 - Other conduct which could reasonably be considered inappropriate in a
-professional setting.
+  professional setting.
 
 ## Enforcement Responsibilities
 
@@ -105,7 +105,7 @@ Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the community leaders responsible for enforcement at:
 
 - Members of [Mintlify](https://github.com/mintlify).
-- Core team members in [Discord](https://discord.com/invite/MPNgtSZkgK).
+- Core team members in [Slack](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA).
 
 All complaints will be reviewed and investigated promptly and fairly.
 All community leaders are obligated to respect the privacy and security of the
