--- a/contributing.mdx
+++ b/contributing.mdx
@@ -6,7 +6,7 @@ description: "Contributing to Mintlify"
 ## Overview
 
 Thank you for your interest in contributing to Mintlify! There are multiple ways to
-contribute, please feel free to ask for help on [Discord](https://discord.com/invite/MPNgtSZkgK) or
+contribute, please feel free to ask for help on [Slack](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or
 [GitHub](https://github.com/mintlify/mint/issues).
 
 Everyone who contributes to Mintlify is expected to:
@@ -97,8 +97,9 @@ const x: any = {};
 
 <Tip>
   If you need help or if you encounter errors or warnings, don't hesitate to ask
-  a question on [Discord](https://discord.com/invite/MPNgtSZkgK) or
-  [GitHub](https://github.com/mintlify/mint/issues).
+  a question on
+  [Slack](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA)
+  or [GitHub](https://github.com/mintlify/mint/issues).
 </Tip>
 
 ## Contribution guidelines and standards
