update community url

--- a/code-of-conduct.mdx
+++ b/code-of-conduct.mdx
@@ -105,7 +105,7 @@ Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the community leaders responsible for enforcement at:
 
 - Members of [Mintlify](https://github.com/mintlify).
-- Core team members in [Slack](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA).
+- Core team members in [Slack](https://mintlify.com/community).
 
 All complaints will be reviewed and investigated promptly and fairly.
 All community leaders are obligated to respect the privacy and security of the
