--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: "Build beautiful documentation that converts users"
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
 
-Welcome to Mintlify's docs! Get started creating beautiful docs effortlessly. If you have any questions, join our [Slack Community](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA) or [email us](mailto:kate@mintlify.com).
+Welcome to Mintlify's docs! Get started creating beautiful docs effortlessly. If you have any questions, join our [Slack Community](https://mintlify.com/community) or [email us](mailto:kate@mintlify.com).
 
 See how other companies are building high-converting documentation on our
 [showcase](https://mintlify.com/showcase).
