--- a/contributing.mdx
+++ b/contributing.mdx
@@ -97,9 +97,8 @@ const x: any = {};
 
 <Tip>
   If you need help or if you encounter errors or warnings, don't hesitate to ask
-  a question on
-  [Slack](https://join.slack.com/t/mintlify-users/shared_invite/zt-1xfzz6x35-f4o4WCYfpvLhSj3O7WAOMA)
-  or [GitHub](https://github.com/mintlify/mint/issues).
+  a question on [Slack](https://mintlify.com/community) or
+  [GitHub](https://github.com/mintlify/mint/issues).
 </Tip>
 
 ## Contribution guidelines and standards
