add icon for api components

--- a/content/api-components.mdx
+++ b/content/api-components.mdx
@@ -1,6 +1,7 @@
 ---
 title: "API Components"
 description: "Create API playgrounds, request parameters and more."
+icon: "webhook"
 ---
 
 Mintlify supports setting up your API Playgrounds manually or autogenerating them from an OpenAPI spec.
