subdirectory finish setup

--- a/settings/custom-domain/subdirectory.mdx
+++ b/settings/custom-domain/subdirectory.mdx
@@ -78,3 +78,7 @@ async function handleRequest(request) {
 ```
 
 Click on `Save and deploy` and wait for the changes to propagate (it can take up to a few hours).
+
+## Reach out to Mintlify team
+
+Once completing the Cloudflare setup, the Mintlify team will setup the subdirectory settings in your deployment. Reach out over [email](mailto:support@mintlify.com) or in our [community](https://mintlify.com/community).
