add initialValue to param, remove optional

--- a/api-playground/components/api/param.mdx
+++ b/api-playground/components/api/param.mdx
@@ -47,7 +47,7 @@ All `ParamField` components are added as interactive elements in the API playgro
 | `query`, `path`, `body`, `header` | string  | Whether it is a query, path, body, or header parameter followed by the name |
 | `type`                            | string  | Expected type of the parameter's value                                      |
 | `required`                        | boolean | Indicate whether the parameter is required                                  |
-| `optional`                        | boolean | Indicate whether the parameter is optional                                  |
-| `default`                         | string  | Default value                                                               |
-| `placeholder`                     | string  | Placeholder value for the input in the playground                           |
+| `default`                         | string  | Default value used by the server if the request does not provide a value    |
+| `initialValue`                    | any     | Value that will be used to initialize the playground                        |
+| `placeholder`                     | string  | Placeholder text for the input in the playground                            |
 | `children`                        | string  | Description of the parameter (markdown enabled)                             |
