Update images highlight and custom settings

--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Preview Changes"
-description: "Learn how to preview changes locally"
+title: 'Development'
+description: 'Learn how to preview changes locally'
 ---
 
 <Info>
@@ -69,7 +69,9 @@ yarn global upgrade mintlify
 
 You should see the following if the deploy successfully went through:
 
-<img src="/images/checks-passed.png" style={{ width: "50 rem" }} />
+<Frame>
+  <img src="/images/checks-passed.png" />
+</Frame>
 
 ## Troubleshooting
 
