--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Subdomain"
+title: 'Subdomain'
 description: "Host the documentation at your website's custom subdomain"
 ---
 
@@ -14,7 +14,18 @@ To host your docs on a custom subdomain, you'll need to set the custom subdomain
 
 Navigate to your [dashboard project](https://dashboard.mintlify.com) and click "Add custom subdomain". Submit the custom subdomain you want, ommitting `https://www`. For example, `docs.mintlify.com`.
 
-![](/images/add-custom-domain.png)
+<Frame>
+  <img
+    alt="Custom Domain"
+    className="block dark:hidden"
+    src="/images/add-custom-domain-light.png"
+  />
+  <img
+    alt="Custom Domain"
+    className="hidden dark:block"
+    src="/images/add-custom-domain-dark.png"
+  />
+</Frame>
 
 ## Vercel Verification
 
@@ -28,10 +39,8 @@ Navigate to the DNS settings for your domain on your domain provider. Add a new 
 CNAME | docs | cname.vercel-dns.com
 ```
 
-<img
-  alt="DNS"
-  src="https://mintlify-assets.b-cdn.net/mintlify-dns.png"
-  style={{ borderRadius: "0.5rem" }}
-/>
+<Frame>
+  <img alt="DNS" src="https://mintlify-assets.b-cdn.net/mintlify-dns.png" />
+</Frame>
 
 Please [contact support](mailto:hi@mintlify.com) if you don't see the custom subdomain set up after the above configuration.
