--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Navigation"
-description: "Organize your docs directory to guide your users to the information they need "
+title: 'Navigation'
+description: 'Organize your docs directory to guide your users to the information they need '
 ---
 
 ## Tabs
@@ -8,8 +8,8 @@ description: "Organize your docs directory to guide your users to the informatio
 Tabs help distinguish between different topics or sections of your documentation. They show up above the main sidebar.
 
 <Frame>
-  <img className="block h-36 dark:hidden" src="/images/tabs-light.png" />
-  <img className="hidden h-36 dark:block" src="/images/tabs-dark.png" />
+  <img className="block dark:hidden" src="/images/tabs-light.png" />
+  <img className="hidden dark:block" src="/images/tabs-dark.png" />
 </Frame>
 
 Configure tabs with the `tabs` field of the `mint.json` file. The `pages` field of the tab object should map to a folder of content added to your sidebar.
@@ -40,14 +40,8 @@ To configure the default `Documentation` primary tab, add the `primaryTab` field
 Anchors provide another way to direct users to sections of your documentation, or link out to external URLs.
 
 <Frame>
-  <img
-    className="block h-36 dark:hidden"
-    src="https://mintlify-assets.b-cdn.net/anchor-light.png"
-  />
-  <img
-    className="hidden h-36 dark:block"
-    src="https://mintlify-assets.b-cdn.net/anchor-dark.png"
-  />
+  <img className="block dark:hidden" src="/images/anchor-light.png" />
+  <img className="hidden dark:block" src="/images/anchor-dark.png" />
 </Frame>
 
 Configure anchors with the `anchors` field of the `mint.json` file. The `url` field of the tab object should map an external link, or a folder of content added to your sidebar. More fields for anchors can be found [here](/settings/global).
