--- a/settings/custom-domain/subdirectory.mdx
+++ b/settings/custom-domain/subdirectory.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Subdirectory"
-description: "Host documentation at a /docs subdirectory"
+title: 'Subdirectory'
+description: 'Host documentation at a /docs subdirectory'
 ---
 
 <Tip>
@@ -16,21 +16,23 @@ Sign up for an account and [add your site to Cloudflare](https://developers.clou
 
 Navigate to the `Workers > Create a service`. You should be able to presented with the following screen where you can create a new Cloudlfare worker.
 
-<img
-  alt="Create a Cloudflare worker"
-  src="https://mintlify-assets.b-cdn.net/cloudflare-worker.png"
-  style={{ borderRadius: "0.5rem" }}
-/>
+<Frame>
+  <img
+    alt="Create a Cloudflare worker"
+    src="https://mintlify-assets.b-cdn.net/cloudflare-worker.png"
+  />
+</Frame>
 
 ### Add custom domain
 
 Once the worker is created, navigate to the worker settings and then `Triggers > Custom Domains`. Click on `Add Custom Domain` to then add your following domains into the list.
 
-<img
-  alt="Cloudflare worker custom domain"
-  src="https://mintlify-assets.b-cdn.net/cloudflare-worker-custom-domain.png"
-  style={{ borderRadius: "0.5rem" }}
-/>
+<Frame>
+  <img
+    alt="Cloudflare worker custom domain"
+    src="https://mintlify-assets.b-cdn.net/cloudflare-worker-custom-domain.png"
+  />
+</Frame>
 
 If you have trouble setting up custom subdirectory, [contact our support team](mailto:hi@mintlify.com) and we'll walk you through upgrading your hosting with us.
 
@@ -44,7 +46,7 @@ Click on `Quick edit` and add the following script into the worker's code.
 </Tip>
 
 ```javascript
-addEventListener("fetch", (event) => {
+addEventListener('fetch', (event) => {
   event.respondWith(handleRequest(event.request));
 });
 
@@ -54,17 +56,17 @@ async function handleRequest(request) {
     // If the request is to the docs subdirectory
     if (/^\/docs/.test(urlObject.pathname)) {
       // Then Proxy to Mintlify
-      const DOCS_URL = "[SUBDOMAIN].mintlify.dev";
-      const CUSTOM_URL = "[YOUR_DOMAIN]";
+      const DOCS_URL = '[SUBDOMAIN].mintlify.dev';
+      const CUSTOM_URL = '[YOUR_DOMAIN]';
 
       let url = new URL(request.url);
       url.hostname = DOCS_URL;
 
       let proxyRequest = new Request(url, request);
 
-      proxyRequest.headers.set("Host", DOCS_URL);
-      proxyRequest.headers.set("X-Forwarded-Host", CUSTOM_URL);
-      proxyRequest.headers.set("X-Forwarded-Proto", "https");
+      proxyRequest.headers.set('Host', DOCS_URL);
+      proxyRequest.headers.set('X-Forwarded-Host', CUSTOM_URL);
+      proxyRequest.headers.set('X-Forwarded-Proto', 'https');
 
       return await fetch(proxyRequest);
     }
