Tiny correction on the anchors url

--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -61,7 +61,7 @@ Configure anchors with the `anchors` field of the `mint.json` file. The `url` fi
     {
         "name": "Contact us",
         "icon": "envelope",
-        "url": "mintlify.com/contact-us"
+        "url": "https://mintlify.com/contact-us"
     }
 ]
 ```
