update tabs field

--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -12,17 +12,17 @@ Tabs help distinguish between different topics or sections of your documentation
   <img className="hidden h-36 dark:block" src="/images/tabs-dark.png" />
 </Frame>
 
-Configure tabs with the `tabs` field of the `mint.json` file. The `pages` field of the tab object should map to a folder of content added to your sidebar.
+Configure tabs with the `tabs` field of the `mint.json` file. The `url` field of the tab object should map to a folder of content added to your sidebar, or an external link.
 
 ```json
 "tabs": [
     {
         "name": "API References",
-        "pages": "api-references"
+        "url": "api-references"
     },
     {
         "name": "Content",
-        "pages": "content"
+        "url": "content"
     }
 ]
 ```
