--- a/settings/custom-domain/subdomain.mdx
+++ b/settings/custom-domain/subdomain.mdx
@@ -43,4 +43,6 @@ CNAME | docs | cname.vercel-dns.com
   <img alt="DNS" src="https://mintlify-assets.b-cdn.net/mintlify-dns.png" />
 </Frame>
 
+If you are using CLoudflare for your DNS provider, you'll need to have the “full strict” security option enabled for the https setting.
+
 Please [contact support](mailto:hi@mintlify.com) if you don't see the custom subdomain set up after the above configuration.
