--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -66,7 +66,7 @@ Configure anchors with the `anchors` field of the `mint.json` file. The `url` fi
 ]
 ```
 
-To configure the default `Documentation` top anchor, add the `topAnchor` field to your `mint.json`.
+To configure the default `Documentation` top anchor, add the `topAnchor` field to your `mint.json`. Note: The default top anchor does not show
 
 ```json
 "topAnchor": {
