--- a/introduction.mdx
+++ b/introduction.mdx
@@ -59,9 +59,9 @@ See how other companies are building high-converting documentation on our
 <Card
   title="Contact Us"
   icon="user-headset"
-  href="https://calendly.com/kate-mintlify/support"
+  href="https://calendly.com/mintlify/mintlify-enterprise"
 >
-  Questions or customizations? Need help setting up? Book a 1x1 meeting with us.
+  Questions about custom plans? Book a 1x1 meeting with us.
 </Card>
 
 </CardGroup>
