--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -120,9 +120,10 @@ Simply put your MDX files in folders and update the paths in `mint.json`.
 For example, to have a page at `https://yoursite.com/your-folder/your-page` you would make a folder called `your-folder` containing an MDX file called `your-page.mdx`.
 
 <Warning>
-
-You cannot use `api` for the name of a folder unless you nest it inside another folder. Mintlify uses Next.js which reserves the top-level `api` folder for internal server calls. A folder name such as `api-reference` would be accepted.
-
+  You cannot use `api` for the name of a folder unless you nest it inside
+  another folder. Mintlify uses Next.js which reserves the top-level `api`
+  folder for internal server calls. A folder name such as `api-reference` would
+  be accepted.
 </Warning>
 
 ```json Navigation With Folder
