--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -22,10 +22,30 @@ Note that the image file size must be less than 5MB. Otherwise, we recommend hos
 
 ### Using Embeds
 
-To get more customizability with images, you can also use [embeds](/writing-content/embed) to add images
+To get more customizability with images, you can also use [embeds](/writing-content/embed) to add images.
 
 ```html
 <img height="200" src="/path/image.jpg" />
+```
+
+### Disable Image Zoom
+
+To disable the default zoom on click for images, add the noZoom property to image embeds.
+
+```html
+<img height="200" noZoom src="/path/image.jpg" />
+```
+
+<img
+  className="rounded-md"
+  noZoom
+  src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
+/>
+
+Images encompassed in MDX link notation will also have the zoom feature disabled.
+
+```md
+[![title](/path/image.jpg)](https://mintlify.com)
 ```
 
 ### Related
