--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -122,8 +122,8 @@ For example, to have a page at `https://yoursite.com/your-folder/your-page` you 
 <Warning>
   You cannot use `api` for the name of a folder unless you nest it inside
   another folder. Mintlify uses Next.js which reserves the top-level `api`
-  folder for internal server calls. A folder name such as `api-reference` would
-  be accepted.
+  folder for internal server calls. We recommend using the folder name
+  `api-reference` instead.
 </Warning>
 
 ```json Navigation With Folder
