--- a/settings/page.mdx
+++ b/settings/page.mdx
@@ -90,7 +90,7 @@ icon: "rectangle-code"
 ---
 ```
 
-## External Redirects
+## External Links
 
 If you want the sidebar to open an external URL, you can set the `url` metadata in any page.
 
