--- a/settings/navigation.mdx
+++ b/settings/navigation.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Navigation'
-description: 'Organize your docs directory to guide your users to the information they need '
+title: "Navigation"
+description: "Organize your docs directory to guide your users to the information they need "
 ---
 
 ## Tabs
@@ -126,6 +126,8 @@ For example, to have a page at `https://yoursite.com/your-folder/your-page` you 
   `api-reference` instead.
 </Warning>
 
+<CodeGroup>
+
 ```json Navigation With Folder
 "navigation": [
     {
@@ -135,6 +137,22 @@ For example, to have a page at `https://yoursite.com/your-folder/your-page` you 
 ]
 ```
 
+```json Nested Navigation
+"navigation": [
+    {
+        "group": "Getting Started",
+        "pages": [
+            "quickstart",
+            {
+                "group": "Nested Reference Pages",
+                "pages": ["nested-reference-page"]
+            }
+        ]
+    }
+]
+```
+
+</CodeGroup>
 ### Hidden Pages
 
 MDX files not included in `mint.json` will not show up in the sidebar but are accessible through the search bar and by linking directly to them.
