--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -42,11 +42,19 @@ To disable the default zoom on click for images, add the noZoom property to imag
   src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
 />
 
-Images encompassed in MDX link notation will also have the zoom feature disabled.
+### Linking Images
 
-```md
-[![title](/path/image.jpg)](https://mintlify.com)
+To link an image, for example to create a button on your docs, encompass the image in a link with the `noZoom` property. You can also add a cursor pointer to make it look clickable.
+
+```html
+<a href="https://mintlify.com" target="_blank">
+  <img height="200" className="pointer-cursor" noZoom src="/path/image.jpg" />
+</a>
 ```
+
+<a href="https://mintlify.com" target="_blank">
+  <img height="200" className="pointer-cursor" noZoom src="/path/image.jpg" />
+</a>
 
 ### Related
 
