--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -38,11 +38,11 @@ To disable the default zoom on click for images, add the noZoom property to imag
 
 ### Linking Images
 
-To link an image, for example to create a button on your docs, encompass the image in a link with the `noZoom` property. You can also add a cursor pointer to make it look clickable.
+To link an image, for example to create a button on your docs, encompass the image in a link with the `noZoom` property. Images in `a` tags will automatically have a pointer cursor. 
 
 ```html
 <a href="https://mintlify.com" target="_blank">
-  <img height="200" className="pointer-cursor" noZoom src="/path/image.jpg" />
+  <img height="200" noZoom src="/path/image.jpg" />
 </a>
 ```
 
