--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Development'
-description: 'Learn how to preview changes locally'
+title: "Development"
+description: "Learn how to preview changes locally"
 ---
 
 <Info>
@@ -94,5 +94,3 @@ Repeat step 3.
     Then run `mintlify dev` again.
   </Accordion>
 </AccordionGroup>
-
-Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
