--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: "Build beautiful documentation that converts users"
+title: 'Introduction'
+description: 'Build beautiful documentation that converts users'
 ---
 
 ![Hero Image](https://mintlify-assets.b-cdn.net/intro-hero-light.png)
@@ -19,7 +19,7 @@ See how other companies are building high-converting documentation on our
 
 <CardGroup cols={2}>
 <Card title="Quickstart" icon="timer" href="/quickstart">
-  How to set up, update, and write out your docs.
+  How to set up, update, and write out your docs
 </Card>
 
 <Card
@@ -27,7 +27,7 @@ See how other companies are building high-converting documentation on our
   icon="browser"
   href="/settings/custom-domain/subdomain"
 >
-  Keep your docs on your own website’s subdomain.
+  Keep your docs on your own website's subdomain
 </Card>
 
 </CardGroup>
@@ -37,7 +37,7 @@ See how other companies are building high-converting documentation on our
 <CardGroup cols={2}>
 
 <Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
+  Add flair to your docs with personalized branding
 </Card>
 
 <Card
@@ -45,7 +45,7 @@ See how other companies are building high-converting documentation on our
   icon="square-code"
   href="/api-playground/configuration"
 >
-  Implement your OpenAPI spec and enable API user interaction.
+  Implement your OpenAPI spec and enable API user interaction
 </Card>
 
 <Card
@@ -53,7 +53,7 @@ See how other companies are building high-converting documentation on our
   icon="chart-mixed"
   href="/analytics/supported-integrations"
 >
-  Draw insights from user interactions with your documentation .
+  Draw insights from user interactions with your documentation
 </Card>
 
 <Card
@@ -61,7 +61,7 @@ See how other companies are building high-converting documentation on our
   icon="user-headset"
   href="https://calendly.com/mintlify/mintlify-enterprise"
 >
-  Questions about custom plans? Book a 1x1 meeting with us.
+  Questions about custom plans? Book a 1x1 meeting with us
 </Card>
 
 </CardGroup>
