--- a/development.mdx
+++ b/development.mdx
@@ -22,7 +22,7 @@ yarn global add mintlify
 
 </CodeGroup>
 
-Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
+Step 2. Go to the docs directory (where you can find `mint.json`) and run the following command:
 
 ```bash
 mintlify dev
