--- a/introduction.mdx
+++ b/introduction.mdx
@@ -12,7 +12,7 @@ See how other companies are building high-converting documentation on our
 
 <Info>
   Get a free migration with our startup plan. Request a migration on your
-  [dashboard](dashboard.mintlify.com).
+  [dashboard](https://dashboard.mintlify.com).
 </Info>
 
 ## Get Started
