--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -3,7 +3,7 @@ title: "Global Settings (mint.json)"
 description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
 ---
 
-Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
+Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example)
 
 ## Properties
 
@@ -257,6 +257,16 @@ Example: `mintlify`
   </Expandable>
 </ResponseField>
 
+<ResponseField name="search" type="Search">
+  Configurations to change the search prompt
+
+  <Expandable title="Search">
+    <ResponseField name="prompt" type="string" default="undefined">
+    Set the prompt for the search bar. Default is `Search...`
+    </ResponseField>
+  </Expandable>
+</ResponseField>
+
 ### API Configurations
 
 <ResponseField name="api" type="API">
@@ -345,7 +355,7 @@ Example: `mintlify`
   supported analytics [here](/analytics/supported-integrations).
 </ResponseField>
 
-## Example `mint.json`
+<h2 id="example">Example mint.json</h2>
 
 Click on the following dropdown to view a sample configuration file
 
