--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -3,7 +3,7 @@ title: "Global Settings (mint.json)"
 description: "Mintlify gives you complete control over the look and feel of your documentation using the mint.json file"
 ---
 
-Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example)
+Every Mintlify site needs a `mint.json` file with the core configuration settings. Learn more about the [properties](#properties) or from an [example](#example-mint-json)
 
 ## Properties
 
