--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -355,7 +355,7 @@ Example: `mintlify`
   supported analytics [here](/analytics/supported-integrations).
 </ResponseField>
 
-<h2 id="example">Example mint.json</h2>
+## Example `mint.json`
 
 Click on the following dropdown to view a sample configuration file
 
