--- a/content/api-components.mdx
+++ b/content/api-components.mdx
@@ -17,7 +17,7 @@ Mintlify supports setting up your API Playgrounds manually or autogenerating the
 </Card>
 
 <Card title="API Components" icon="react" href="/api-playground/components">
-  User our request, response, and query components out of the box.
+  Use our request, response, and query components out of the box.
 </Card>
 
 <Card
