--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -355,6 +355,27 @@ Example: `mintlify`
   supported analytics [here](/analytics/supported-integrations).
 </ResponseField>
 
+### Redirects
+
+<ResponseField name="redirects" type="Redirect[]" required>
+  An array of paths you want to configure to permanently redirect to another path
+  <Expandable title="Redirect">
+    <ResponseField name="source" type="string">
+    The path that you want to redirect from.
+
+    Example: `/source`
+
+    </ResponseField>
+    <ResponseField name="destination" type="string">
+    The path that you want to redirect to.
+
+    Example: `/destination`
+
+    </ResponseField>
+
+  </Expandable>
+</ResponseField>
+
 ## Example `mint.json`
 
 Click on the following dropdown to view a sample configuration file
