--- a/api-playground/components/api/sticky-examples.mdx
+++ b/api-playground/components/api/sticky-examples.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Sticky Code Examples'
-description: 'Display code blocks at the top-right of the page on desktop devices'
-icon: 'sidebar-flip'
+title: "Sticky Code Examples"
+description: "Display code blocks at the top-right of the page on desktop devices"
+icon: "sidebar-flip"
 ---
 
 The `<RequestExample>` and `<ResponseExample>` to stick code blocks to the top-right of a page even as you scroll. The components work on all pages even if you don't use an API playground.
@@ -10,7 +10,7 @@ The `<RequestExample>` and `<ResponseExample>` to stick code blocks to the top-r
 
 ## Request Example
 
-The `<RequestExample>` component works similar to [CodeGroup](/writing-content/code#code-group), but displays the request content on the right sidebar. Thus, you can put multiple code blocks inside `<RequestExample>`.
+The `<RequestExample>` component works similar to [CodeGroup](/content/code#code-group), but displays the request content on the right sidebar. Thus, you can put multiple code blocks inside `<RequestExample>`.
 
 Please set a name on every code block you put inside RequestExample.
 
