--- a/content/component-library.mdx
+++ b/content/component-library.mdx
@@ -9,7 +9,7 @@ Mintlify provides a library of build-in-components to make your docs beautiful w
 
 ### Code Blocks
 
-The following example is a [Code](/writing-content/code) component, which lets you display syntax-highlighted code.
+The following example is a [Code](/content/code) component, which lets you display syntax-highlighted code.
 
 ```java
 class HelloWorld {
