--- a/content/embed.mdx
+++ b/content/embed.mdx
@@ -43,7 +43,7 @@ To have videos autoplay, add `autoplay = {true}`.
 
 ### Images
 
-Insert an image onto the page. Used over the standard [markdown image syntax](/writing-content/image-embeds#using-markdown) for more control over the image styling.
+Insert an image onto the page. Used over the standard [markdown image syntax](/content/image-embeds#using-markdown) for more control over the image styling.
 
 ```html
 <img height="200" src="/path/image.jpg" />
