--- a/content/image-embeds.mdx
+++ b/content/image-embeds.mdx
@@ -22,7 +22,7 @@ Note that the image file size must be less than 5MB. Otherwise, we recommend hos
 
 ### Using Embeds
 
-To get more customizability with images, you can also use [embeds](/writing-content/embed) to add images.
+To get more customizability with images, you can also use [embeds](/content/embed) to add images.
 
 ```html
 <img height="200" src="/path/image.jpg" />
