--- a/development.mdx
+++ b/development.mdx
@@ -73,6 +73,10 @@ You should see the following if the deploy successfully went through:
   <img src="/images/checks-passed.png" />
 </Frame>
 
+## Code Formatting
+
+We recommend using extensions on your preferred IDE to recognize and format MDX. For VSCode users, we recommend this (MDX VSCode extension)[https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx] for syntax highlighting and (Prettier)[https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode] for formatting.
+
 ## Troubleshooting
 
 Here's how to solve some common problems when working with the CLI.
