add broken links

--- a/content/text.mdx
+++ b/content/text.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Markdown Syntax'
-description: 'Text, title, and styling in standard markdown'
+title: "Markdown Syntax"
+description: "Text, title, and styling in standard markdown"
 ---
 
 ## Titles
@@ -44,14 +44,15 @@ You need to use HTML to write superscript and subscript text. That is, add `<sup
 | Superscript | `<sup>superscript</sup>` | <sup>superscript</sup> |
 | Subscript   | `<sub>subscript</sub>`   | <sub>subscript</sub>   |
 
-
 ## Linking to Pages
 
 You can add a link by wrapping text in `[]()`. You would write `[link to google](https://google.com)` to [link to google](https://google.com).
 
-Links to pages in your docs need to be root-relative. Basically, you should include the entire folder path. For example, `[link to text](/writing-content/text)` links to the page "Text" in our components section.
+Links to pages in your docs need to be root-relative. Basically, you should include the entire folder path. For example, `[link to text](/content/text)` links to the page "Text" in our components section.
 
 Relative links like `[link to text](../text)` will open slower because we cannot optimize them as easily.
+
+You can validate broken links in your docs with [our CLI](/development).
 
 ## Blockquotes
 
