--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Development"
-description: "Learn how to preview changes locally"
+description: "Preview changes locally to update your docs"
 ---
 
 <Info>
@@ -59,6 +59,14 @@ yarn global upgrade mintlify
 ```
 
 </CodeGroup>
+
+## Validating Links
+
+The CLI can help you validate reference links made in your docs. If you have pages that reference other pages, use the following command to identify any broken links.
+
+```bash npm
+mintlify broken-links
+```
 
 ## Deployment
 
