Add redirect and tab examples

--- a/settings/global.mdx
+++ b/settings/global.mdx
@@ -209,6 +209,22 @@ Example: `mintlify`
 
 <ResponseField name="tabs" type="Tabs[]">
   An array of navigational tabs.
+
+Example:
+
+```json
+"tabs": [
+  {
+    "name": "Writing Content",
+    "url": "content"
+  },
+  {
+    "name": "API References",
+    "url": "api-playground"
+  }
+]
+```
+
   <Expandable title="Tabs">
     <ResponseField name="name" type="string">
       The name of the tab label.
@@ -359,6 +375,18 @@ Example: `mintlify`
 
 <ResponseField name="redirects" type="Redirect[]" required>
   An array of paths you want to configure to permanently redirect to another path
+
+Example:
+
+```json
+"redirects": [
+  {
+    "source": "/source/path",
+    "destination": "/destination/path"
+  }
+]
+```
+
   <Expandable title="Redirect">
     <ResponseField name="source" type="string">
     The path that you want to redirect from.
