--- a/development.mdx
+++ b/development.mdx
@@ -83,7 +83,7 @@ You should see the following if the deploy successfully went through:
 
 ## Code Formatting
 
-We recommend using extensions on your preferred IDE to recognize and format MDX. For VSCode users, we recommend this (MDX VSCode extension)[https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx] for syntax highlighting and (Prettier)[https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode] for formatting.
+We recommend using extensions on your preferred IDE to recognize and format MDX. For VSCode users, we recommend this [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for formatting.
 
 ## Troubleshooting
 
